--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 name = "Steganography"
 uuid = "b36d76f3-e888-5fd0-8dd3-e39a55b413c6"
+version = "0.0.2"
+author = ["David S. Smith <david.smith@gmail.com>"]
 
 [deps]
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
